[tool.poetry]
name = "deep-learning-from-scratch-3"
version = "0.1.0"
description = ""
authors = ["GoGiants1 <chooi221@snu.ac.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
matplotlib = "^3.8.0"
numpy = "^1.26.1"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.1"

[tool.pylint.'MESSAGES CONTROL']
disable = "redefined-outer-name"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
